Fixed crosshair cursor not showing when ruler is hidden.

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -29,6 +29,10 @@
   }
 }
 
+.cursor-crosshair {
+  cursor: crosshair;
+}
+
 .code-editor {
   font-family: monospace;
 }
